# Repository-Intelligence-Layer-for-AI-Agents

./: .dockerignore  .gitignore  Dockerfile  README.md  SETUP.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
benchmarks/: README.md
docs/: plugins.md
plugins/go/: pyproject.toml
plugins/go/repointel_go/: __init__.py
src/repointel/: __init__.py
src/repointel/cli/: __init__.py
src/repointel/cli/commands/: __init__.py  analyze.py  benchmark.py  build.py  context.py  eval.py  explain.py  graph.py  impact.py  init.py  knowledge.py  scan.py  serve.py  update.py
src/repointel/context/: __init__.py  benchmark.py  conventions.py  coverage.py  eval.py  explanation.py  feature.py  impact.py  incremental.py  knowledge.py  memory.py  staleness.py  symbols.py  testmap.py
src/repointel/context/architecture/: __init__.py
src/repointel/context/compression/: __init__.py
src/repointel/context/summary/: __init__.py
src/repointel/graph/: __init__.py
src/repointel/graph/builder/: __init__.py  cache.py  dart.py  parsed.py  python.py
src/repointel/graph/impact/: __init__.py
src/repointel/graph/traversal/: __init__.py
src/repointel/mcp/: __init__.py  tools.py
src/repointel/mcp/server/: __init__.py
src/repointel/models/: __init__.py  context.py  explanation.py  fingerprint.py  graph.py  impact.py  inventory.py  knowledge.py  memory.py
src/repointel/plugins/: __init__.py  base.py  registry.py
src/repointel/plugins/builtin/: __init__.py  dart.py  python.py
src/repointel/scanners/: __init__.py  base.py  orchestrator.py  registry.py
src/repointel/scanners/dart/: __init__.py
src/repointel/scanners/java/: __init__.py
src/repointel/scanners/python/: __init__.py
src/repointel/scanners/typescript/: __init__.py
src/repointel/storage/: __init__.py
src/repointel/storage/json/: __init__.py
src/repointel/storage/sqlite/: __init__.py
tests/: test_cli.py  test_coverage.py  test_eval.py  test_explain.py  test_fingerprint.py  test_graph.py  test_impact.py  test_incremental.py  test_init.py  test_knowledge.py  test_mcp.py  test_memory.py  test_platform.py  test_plugins.py  test_scan.py  test_staleness.py
